Fixed text overflow on review cards

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -131,7 +131,7 @@ div#artist__card div#booking___info-container {
 
 
 #review-preview {
-    height: 70px;
+    height: 65spx;
     /* white-space: nowrap; */
 }
 
